<resources>
    <string name="app_name">AndroidFarmers</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fruit">Fruit</string>
    <string name="vegetable">Vegetable</string>
    <string name="quantity">Quantity</string>
    <string name="crop_type">Crop Type</string>
    <string name="crop_name">Crop Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>