<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCropFragment">

    <TextView
        android:id="@+id/cropName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="148dp"
        android:text="@string/crop_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cropType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/crop_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cropName" />

    <TextView
        android:id="@+id/cropQuantity"
        android:layout_width="54dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cropType" />

    <EditText
        android:id="@+id/cropNameInput"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cropName"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/radioGroup"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cropQuantityInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cropType"
        app:layout_constraintTop_toBottomOf="@+id/cropNameInput">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"

            android:text="@string/vegetable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="64dp"
            android:text="@string/fruit"
            app:layout_constraintStart_toStartOf="@+id/radioButton3"
            app:layout_constraintTop_toBottomOf="@+id/radioButton3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/cropQuantityInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="376dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:orientation='horizontal'
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cropQuantity" />

    <Button
        android:id="@+id/addCropButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="100dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cropQuantityInput" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addCropButton"
        app:layout_constraintTop_toBottomOf="@+id/cropQuantityInput" />

</androidx.constraintlayout.widget.ConstraintLayout>